# rambo-bot

./: .editorconfig  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
core/: config.py
data/: heroes.json  members.json  players.json  quotes.json
go/: go.mod
go/src/: main.go
python/: pyproject.toml
src/: index.ts
src/command/: _CommandList.ts  addquotes.ts  addrss.ts  cd.ts  creupdmember.ts  fbet.ts  fbetrs.ts  membet.ts  meminfo.ts  roll.ts  rss.ts  ucmem.ts
src/config/: IntentOptions.ts
src/db/: connectDb.ts
src/db/model/: FootbalBetModel.ts  MemberModel.ts  RssModel.ts
src/event/: onInteraction.ts  onMessage.ts  onReady.ts
src/interface/: Command.ts  FootballBet.ts  Member.ts  Rss.ts
src/module/: footballBetCrud.ts  getQuotesData.ts  memberCrud.ts  rssCrud.ts  updateMemberData.ts
src/util/: constant.ts  validateEnv.ts
